test/files/run/t12720.check
newSource1.scala:14: error: missing argument list for method f*** in class D***
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f _` or `f(_)` instead of `f`.
  def f = d.f
            ^
newSource1.scala:9: warning: private constructor in class Test*** is never used
  private def this(stuff: Int) = this()
              ^
newSource1.scala:11: warning: private class Subtle*** in class Test*** is never used
  private class Subtle
                ^
newSource1.scala:15: warning: parameter x*** in method g*** is never used
  def g(x: Int) = println("error")
        ^
newSource1.scala:19: warning: local method m*** in method forgone*** is never used
    def m = 17
        ^
newSource1.scala:20: warning: local object j*** in method forgone*** is never used
    object j
           ^
newSource1.scala:21: warning: local var totally*** in method forgone*** is never used
    var totally = 27
        ^
newSource1.scala:22: warning: local var unset*** in method forgone*** is never updated: consider using immutable val
    var unset: Int = 0
        ^
newSource1.scala:23: warning: local val z*** in method forgone*** is never used
    val z = unset
        ^
newSource1.scala:27: warning: private var misbegotten*** in class Test*** is never used
  private var misbegotten: Int = 42
              ^
newSource1.scala:29: warning: private var forgotten (forgotten_=***) in class Test*** is never updated: consider using immutable val
  private var forgotten: Int = 42
              ^
